# greeting-api

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  build_and_load_image.sh
kubernetes/: greeting-api.yaml  greeting-querier.yaml  greeting_api.yaml
src/: db.rs  greeting.rs  main.rs  open_telemetry.rs  settings.rs
