[package]
name = "greeting_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
#idna = "1.0.0"
log = "0.4.21"
#OTEL
opentelemetry = {version = "0.25.0",features = ["metrics", "logs"] }
opentelemetry_sdk = {version = "0.25.0",  features = ["rt-tokio", "logs"] }
opentelemetry-otlp = {version = "0.25.0",  features = ["tonic", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.25.0"
opentelemetry-appender-tracing = {  version = "0.25.0",default-features = false}

tracing-subscriber= {version= "0.3.18",features = ["env-filter","registry", "std"]}
tracing = { version = "0.1.40", features = ["std"]}
tracing-core ="0.1.32"
tracing-opentelemetry = "0.26.0"
metrics = "0.23.0"
once_cell = "1.19.0"
actix-web = "4.9.0"

sqlx = { version = "0.8", features = [ "runtime-tokio" , "sqlite", "chrono", "postgres","macros", "uuid"] }
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros= { version = "0.2.0-alpha.6" }
futures-util = "0.3.30"
serde_json = "1.0.85"
config = "0.14.0"
serde = { version = "1.0.204", features = ["derive"] }
dotenv = "0.15.0"
derive_more = "0.99.18"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
chrono = { version = "0.4", features = ["serde"] }

greeting_otel={git = "https://github.com/arnecdn/greeting_otel_lib", version = "0.1.1"}
#greeting_otel={path = "..X/greeting_otel"}