[package]
name = "greeting-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.21"
actix-web = "4.9.0"

sqlx = { version = "0.8", features = [ "runtime-tokio" , "sqlite", "chrono", "postgres","macros"] }
uuid = { version = "1.19.0", features = ["v7"] }
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.30"
config = "0.14.0"
serde = { version = "1.0.204", features = ["derive"] }
dotenv = "0.15.0"
derive_more = "0.99.18"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
validator = "0.20.0"
validator_derive = "0.20.0"
regex = "1.11.1"
once_cell = "1.20.2"
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.142"
#OTEL
greeting_otel={git = "https://github.com/arnecdn/greeting_otel_lib", version = "0.30.0"}
#greeting_otel={path="../greeting_otel", version = "0.30.0"}

tracing-subscriber= {version= "0.3",features = ["env-filter","registry", "std"]}
tracing = { version = "0.1.41", features = ["std"]}
tracing-opentelemetry = "0.31.0"
opentelemetry = { version = "0.30.0", features = ["metrics", "logs"] }

#common database API
#greeting_db_api = { version = "0.2.11", path = "../greeting_db_api" }
greeting_db_api = { version = "0.2.11", git = "https://github.com/arnecdn/greeting_db_api"}

